--- a/idlerpg/src/styles/index.css
+++ b/idlerpg/src/styles/index.css
@@ -4,6 +4,7 @@ body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   user-select: none;
+  background-color: #343c49;
 }
 
 h1 {
@@ -67,14 +68,6 @@ a {
   border: 2px solid rgb(212, 212, 212);;
 }
 
-.game {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 5rem 0.5rem;
-}
-
 .clicker {
   position: relative;
   display: block;
@@ -96,10 +89,6 @@ a {
 
   h2 {
     font-size: 1.5rem;
-  }
-
-  .game {
-    margin: 3rem 0 0 0;
   }
 
   .clicker {
@@ -125,18 +114,5 @@ a {
     outline: none;
     font-size: 0.85rem;
     font-weight: bold;
-  }
-
-  .progress-bar-container {
-    width: 200px; /* Adjust width as needed */
-    height: 10px; /* Adjust height as needed */
-    background-color: #ddd;
-    border-radius: 5px;
-  }
-
-  .progress-bar {
-    height: 100%;
-    background-color: #007bff;
-    transition: width 0.5s ease-in-out; /* Add transition for smooth animation */
   }
 }
