--- a/idlerpg/src/App.module.css
+++ b/idlerpg/src/App.module.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.logo {
+  animation: logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
 .header {
   background-color: #282c34;
   min-height: 100vh;
@@ -11,6 +17,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.link {
+  color: #b318f0;
 }
 
 @keyframes logo-spin {
